# contains_string

./: README.md  pyproject.toml
tests/: test_validator.py
